--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -3,12 +3,12 @@
   }
     
   .Login-header {
-    background-color: #afd3e7;
+    background-color: #ffe7e7;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(3px + 2vmin);
-    color: black;
+    color: rgb(0, 0, 0);
   }
